[gd_scene load_steps=3 format=3 uid="uid://584oawlb3hxe"]

[ext_resource type="Script" path="res://lobby/lobby.gd" id="1_tjmnk"]
[ext_resource type="PackedScene" uid="uid://dy47t2s2h4jpu" path="res://game/game.tscn" id="2_wgw8g"]

[node name="Lobby" type="CanvasLayer"]
script = ExtResource("1_tjmnk")
game_scene = ExtResource("2_wgw8g")

[node name="Popup" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ConnectionContainer" type="VBoxContainer" parent="Popup"]
layout_mode = 2
alignment = 1

[node name="Lobbytext" type="Label" parent="Popup/ConnectionContainer"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="Iptext" type="Label" parent="Popup/ConnectionContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Adresse ip :"

[node name="IPInput" type="LineEdit" parent="Popup/ConnectionContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="NameText" type="Label" parent="Popup/ConnectionContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Nom du joueur :"

[node name="NameInput" type="LineEdit" parent="Popup/ConnectionContainer"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Popup/ConnectionContainer"]
layout_mode = 2
alignment = 1

[node name="JoinButton" type="Button" parent="Popup/ConnectionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join"

[node name="HostButton" type="Button" parent="Popup/ConnectionContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[connection signal="pressed" from="Popup/ConnectionContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Popup/ConnectionContainer/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
